--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulado DETRAN - Prova Teórica 2025</title>
-    
+    <link rel="icon" href="./img/logo-page.png" type="image/x-icon">
     <!-- Bulma CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     
@@ -354,6 +354,10 @@
                                                         <i class="fas fa-target has-text-success mr-2"></i>
                                                         Mínimo <strong>21 acertos (70%)</strong> para aprovação
                                                     </p>
+                                                    <p class="mb-2">
+                                                        <i class="fas fa-images has-text-success mr-2"></i>
+                                                        Questões com <strong>imagens</strong> de placas e situações
+                                                    </p>
                                                 </div>
                                             </div>
                                             <div class="column is-6">
@@ -365,6 +369,10 @@
                                                     <p class="mb-2">
                                                         <i class="fas fa-chart-line has-text-success mr-2"></i>
                                                         <strong>Resultado detalhado</strong> ao final
+                                                    </p>
+                                                    <p class="mb-2">
+                                                        <i class="fas fa-database has-text-success mr-2"></i>
+                                                        Banco com <strong>50+ questões</strong> variadas
                                                     </p>
                                                 </div>
                                             </div>
@@ -599,27 +607,24 @@
                 <div class="columns">
                     <div class="column is-4">
                         <h5 class="title is-5 has-text-white">
-                            <i class="fas fa-car mr-2"></i>
-                            Simulado DETRAN
+                            AutoAprovado
                         </h5>
-                        <p>Prepare-se para a prova teórica com nosso simulado completo e atualizado.</p>
+                        <p>Prepare-se para a prova teórica com nosso simulado totalmente GRATUITO, completo e atualizado.</p>
                     </div>
                     <div class="column is-4">
                         <h6 class="title is-6 has-text-white">Links Úteis</h6>
-                        <p><a href="#"><i class="fas fa-home mr-2"></i>Início</a></p>
-                        <p><a href="#"><i class="fas fa-info-circle mr-2"></i>Sobre</a></p>
-                        <p><a href="#"><i class="fas fa-envelope mr-2"></i>Contato</a></p>
+                        <p><a href="https://www.jotapeportfolio.com.br/"><i class="fas fa-user mr-2"></i>Meu Portfólio</a></p>
+                        <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gamesjoaopedro43@gmail.com&su=Ol%C3%A1%20Jo%C3%A3o%20Pedro!&body=..."><i class="fas fa-envelope mr-2"></i>Contato</a></p>
                     </div>
                     <div class="column is-4">
                         <h6 class="title is-6 has-text-white">Informações</h6>
                         <p><i class="fas fa-calendar mr-2"></i>Atualizado em 2025</p>
                         <p><i class="fas fa-shield-alt mr-2"></i>Apenas para fins educativos</p>
-                        <p><i class="fas fa-heart mr-2"></i>Feito com dedicação</p>
                     </div>
                 </div>
                 <hr style="background-color: rgba(255,255,255,0.2);">
                 <p>
-                    <strong class="has-text-white">Simulado DETRAN 2025</strong> - 
+                    <strong class="has-text-white">AutoAprovado</strong> - 
                     Todos os direitos reservados. Este simulado é apenas para fins educativos.
                 </p>
             </div>
